# full-stack-dev

./: .gitignore  README.md  readme.md
back-end-101/: frameworks_overview.md
back-end-102/project/: main.py  pyproject.toml  users.json
dev-core-101/: dev-core-101-basic-syntax.py  dev-core-101-basic-terms.py  dev-core-101-compiled-or-interpreted.md  dev-core-101-compiled-or-interpreted.txt  dev-core-101-computer-specs.md  dev-core-101-computer-specs.txt  dev-core-101-exercises-js.js  dev-core-101-exercises-python.py  dev-core-101-finalproject-plan.md  dev-core-101-finalproject.py  dev-core-101-industries-research  dev-core-101-industries-research.md  dev-core-101-input-output-js.js  dev-core-101-input-output-python.py  dev-core-101-programming-languages-timeline.md  dev-core-101-programming-languages-timeline.txt  dev-core-101-task-js.js  dev-core-101-task-python.py  dev-core-101-variables-js.js  dev-core-101-variables-python.py  dev-core-101-vs-code-bindings.md  dev-core-industries-research.txt
dev-core-102/: to-do-list.py
dev-core-103/: dev-core-103_lesson1_client_server_sim.py  dev-core-103_lesson2_dns_setup.txt
dev-core-104/: commands_used_lesson_4.txt  commands_used_lesson_6.txt  commands_used_lesson_7.txt
dev-ops-101/: bash_aliases.sh  command_log.txt  dev-ops-101-intro.txt  dev-ops-101-networking.txt  dev-ops-101-reboot-ping-practice.txt  dev-ops-101-server-ip.txt  id_rsa.pub  permission-output.txt  process_status.txt  system_info.sh
front-end-101/: FrontEnd101_Websites_Research.md
my-cv-api-server/: app.py  contactForm.json  pyproject.toml
(+139 files in other folders)
